adds wirite apis
